<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/lnToolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lnToolbar"
        android:background="@color/snow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_42sdp"
                android:layout_marginEnd="@dimen/_42sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:gravity="start"
                android:fontFamily="@font/seguisb"
                android:textAlignment="center"
                android:text="@string/tvTopProfile"
                android:textColor="@color/outer_space"
                android:textSize="@dimen/default_text_size_medium"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_42sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:gravity="start"
                android:text="@string/email"
                android:textColor="@color/outer_space"
                android:textSize="@dimen/default_text_size_medium" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_42sdp"
                android:layout_marginStart="@dimen/_39sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_shadow_border"
                android:ellipsize="end"
                android:fontFamily="@font/segoeuib"
                android:gravity="start|center"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/outer_space"
                android:textSize="@dimen/default_text_size_medium"
                tools:text="johnsmith@gmail.com" />
            <!--</android.support.v7.widget.CardView>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_42sdp"
                android:gravity="start"
                android:text="@string/date_of_birth"
                android:textColor="@color/outer_space"
                android:textSize="@dimen/default_text_size_medium" />

            <EditText
                android:id="@+id/edtDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_42sdp"
                android:layout_marginStart="@dimen/_39sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_shadow_border"
                android:ellipsize="end"
                android:focusable="false"
                android:fontFamily="@font/segoeuii"
                android:gravity="start|center"
                android:text="@string/mm_yy"
                android:maxLines="1"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/outer_space"
                android:textSize="@dimen/_15sdp" />
            <!--</android.support.v7.widget.CardView>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_42sdp"
                android:gravity="start"
                android:text="@string/gender"
                android:textColor="@color/outer_space"
                android:textSize="@dimen/default_text_size_medium" />

            <Spinner
                android:id="@+id/spnGender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_42sdp"
                android:layout_marginStart="@dimen/_39sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_spinner"
                android:fontFamily="@font/segoeuib"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_42sdp"
                android:gravity="start"
                android:text="@string/residential_region"
                android:textColor="@color/outer_space"
                android:textSize="@dimen/default_text_size_medium" />

            <Spinner
                android:id="@+id/spnRegion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_marginStart="@dimen/_39sdp"
                android:layout_marginEnd="@dimen/_42sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_spinner"
                android:fontFamily="@font/segoeuib"
                android:spinnerMode="dropdown" />
            <!--</android.support.v7.widget.CardView>-->

            <Button
                android:id="@+id/btnSave"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_42sdp"
                android:layout_marginEnd="@dimen/_42sdp"
                android:layout_marginStart="@dimen/_41sdp"
                android:layout_marginTop="@dimen/_43sdp"
                android:background="@drawable/forgot_background_button"
                android:elevation="0dp"
                android:fontFamily="@font/segoeui"
                android:gravity="center"
                android:paddingBottom="@dimen/default_padding_bigger"
                android:paddingTop="@dimen/default_padding_bigger"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>