<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ctlSign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow">

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="@font/segoeuib"
        android:text="@string/email"
        android:textColor="@color/outer_space"
        android:textSize="@dimen/default_text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/bg_shadow_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tetEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:background="@android:color/transparent"
            android:fontFamily="@font/segoeui"
            android:inputType="textEmailAddress"
            android:textColor="@color/signInTextColor"
            android:textSize="@dimen/default_text_size_medium" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="@font/segoeuib"
        android:text="@string/password"
        android:textColor="@color/outer_space"
        android:textSize="@dimen/default_text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/bg_shadow_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPass"
        app:passwordToggleDrawable="@drawable/ic_visibility_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/signInToggleTint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tetPass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:background="@android:color/transparent"
            android:fontFamily="@font/segoeui"
            android:inputType="textPassword"
            android:textColor="@color/signInTextColor"
            android:textSize="@dimen/default_text_size_medium" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:drawableEnd="@drawable/ic_navigate_next"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/outer_space"
        android:textSize="@dimen/default_text_size_small_z"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPass" />

    <Button
        android:id="@+id/btnSignIn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:background="@drawable/sign_in_background_button"
        android:elevation="0dp"
        android:enabled="true"
        android:fontFamily="@font/segoeuib"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/signInButtonSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />
</android.support.constraint.ConstraintLayout>